test/e2e/chainsaw/hybridgateway/httproute-status-resolved-refs/09-httproute-non-extensionref-filter.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-non-extensionref-filter
  namespace: ($namespace)
spec:
  parentRefs:
  - name: ($gateway_name)
    namespace: ($gateway_namespace)
  rules:
  - filters:
    - type: RequestHeaderModifier
      requestHeaderModifier:
        set:
        - name: X-Custom-Header
          value: custom-value
    - type: ResponseHeaderModifier
      responseHeaderModifier:
        set:
        - name: X-Response-Header
          value: response-value
    backendRefs:
    - name: ($echo_deployment_name)
      port: 8080
