test/e2e/chainsaw/hybridgateway/httproute-status-resolved-refs/06-httproute-unsupported-extensionref-assert.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-with-unsupported-extensionref
  namespace: ($namespace)
status:
  parents:
    - parentRef:
        name: ($gateway_name)
        namespace: ($gateway_namespace)
      (conditions[?type == 'ResolvedRefs'] | [0]):
        type: ResolvedRefs
        status: "False"
        reason: InvalidKind
        message: "(join('', ['Unsupported ExtensionRef ', ($namespace), '/some-resource group/kind: ', 'unsupported.example.com/UnsupportedKind']))"
      (conditions[?type == 'Accepted'] | [0]):
        type: Accepted
        status: "True"
