test/e2e/chainsaw/hybridgateway/httproute-status-resolved-refs/16-httproute-unsupported-backendref-assert.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-unsupported-backendref
  namespace: ($namespace)
status:
  parents:
    - parentRef:
        name: ($gateway_name)
        namespace: ($gateway_namespace)
      (conditions[?type == 'ResolvedRefs'] | [0]):
        type: ResolvedRefs
        status: "False"
        reason: InvalidKind
        message: "(join('', ['Unsupported BackendRef ', ($namespace), '/some-resource group/kind: ', 'unsupported.example.com/UnsupportedKind']))"
